added new themes, cleaned dependencies

--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -82,6 +82,51 @@
     \definecolorifnotdef{soft}{RGB}{102,46,28}
     \definecolorifnotdef{light}{RGB}{132,76,58}
 }
+%
+% outdoorsy
+%
+\DeclareOption{outdoorsy}{
+    \definecolorifnotdef{main}{RGB}{125,68,39}
+    \definecolorifnotdef{contrastmain}{RGB}{42,41,34}
+    \definecolorifnotdef{soft}{RGB}{72,107,0}
+    \definecolorifnotdef{light}{RGB}{102,137,30}
+}
+%
+% elegant
+%
+\DeclareOption{elegant}{
+    \definecolorifnotdef{main}{RGB}{126,123,21}
+    \definecolorifnotdef{contrastmain}{RGB}{42,41,34}
+    \definecolorifnotdef{soft}{RGB}{179,133,64}
+    \definecolorifnotdef{light}{RGB}{209,163,94}
+}
+%
+% dramatic
+%
+\DeclareOption{dramatic}{
+    \definecolorifnotdef{main}{RGB}{89,130,52}
+    \definecolorifnotdef{contrastmain}{RGB}{42,41,34}
+    \definecolorifnotdef{soft}{RGB}{104,130,158}
+    \definecolorifnotdef{light}{RGB}{134,160,188}
+}
+%
+% dramatic2
+%
+\DeclareOption{dramatic2}{
+    \definecolorifnotdef{main}{RGB}{104,130,158}
+    \definecolorifnotdef{contrastmain}{RGB}{42,41,34}
+    \definecolorifnotdef{soft}{RGB}{89,130,52}
+    \definecolorifnotdef{light}{RGB}{119,160,82}
+}
+%
+% muted
+%
+\DeclareOption{muted}{
+    \definecolorifnotdef{main}{RGB}{142,159,90}
+    \definecolorifnotdef{contrastmain}{RGB}{42,41,34}
+    \definecolorifnotdef{soft}{RGB}{41,136,188}
+    \definecolorifnotdef{light}{RGB}{71,166,218}
+}
 
 \ProcessOptions
 
